# intro-control-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiment.sh
models/: tf_pinns.h5
results/: best_model_weights.weights.h5
src/: demo.py  fdm_result.py  fourier_result.py  main.py  pinns.py  pinns_tf.py  setting.py  show_images.py
