[tool.poetry]
name = "intro-control-ml"
version = "0.1.0"
description = ""
authors = ["Pedro Blöß Braga <50064364+pedroblossbraga@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.16"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
